--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,5 +13,7 @@ jobs:
       # Commands are run in a Windows virtual machine environment
       - checkout
       - run: Write-Host 'Hello, Windows'
+      - run: npm install
+      - run: npm run test
 
 
